# Meatball

./: CMakeLists.txt  Meatball.sln  README.md  prepareExamplesBuild.py  todo.md  todo.txt
Meatball/: Button.cpp  Button.h  Console.cpp  Console.h  ConsoleUI.cpp  ConsoleUI.h  Engine.cpp  Engine.h  Input.h  Label.cpp  Label.h  Meatball.vcxproj  Meatball.vcxproj.filters  Node.cpp  Node.h  NodeUI.cpp  NodeUI.h  Panel.cpp  Panel.h  RESIZE_EXAMPLE2D.cpp  Scene.cpp  Scene.h  SpaceInvadersTest.cpp
Meatball/libs/: HayBCMD-x64.lib  HayBCMD.lib
examples/: CMakeLists.txt  ResizeExample2D.cpp  SpaceInvadersTest.cpp
examples/MeatDataCompressor/: MeatDataCompressor.cpp
examples/data/: Console.meatdata  MainScene.meatdata  consoleUI.meatdata
examples/data/meatdata/: Console.meatdata  MainScene.meatdata
examples/game/: SpaceInvadersTest.cpp
src/: Button.cpp  Button.h  ColorsHandler.cpp  ColorsHandler.h  Config.cpp  Config.h  Console.cpp  Console.h  ConsoleUI.cpp  ConsoleUI.h  Engine.cpp  Engine.h  EventHandler.cpp  EventHandler.h  FontsHandler.cpp  FontsHandler.h  IScene.h  Input.cpp  Input.h  Label.cpp  Label.h  MouseCursor.cpp  Node.cpp  Node.h  NodeUI.cpp  NodeUI.h  OutputColors.cpp  OutputColors.h  Panel.cpp  Panel.h  Scene.cpp  Scene.h  ScriptExecutor.cpp  ScriptExecutor.h  Shared.h  TickHandler.cpp  TickHandler.h  TimeSystem.cpp  TimeSystem.h
src/Config/: Config.cpp  Interface.cpp  Interface.h
src/Interface/: Button.cpp  Button.h  ColoredTextBox.cpp  ColoredTextBox.h  DynamicPanel.cpp  DynamicPanel.h  InputTextBox.cpp  InputTextBox.h  Panel.cpp  Panel.h  ScrollBar.cpp  ScrollBar.h  ScrollBox.cpp  ScrollBox.h  ScrollTextBox.cpp  ScrollTextBox.h  TextButton.cpp  TextButton.h  Textbox.cpp  Textbox.h  Theme.cpp  Theme.h
src/Utils/: CvarFuncs.cpp  CvarFuncs.h  Defaults.cpp  Defaults.h  DrawFuncs.cpp  DrawFuncs.h  Json.cpp  Json.h  MeatdataSerializer.cpp  MeatdataSerializer.h  Serialization.cpp  Serialization.h  Utils.cpp  Utils.h
test/: CMakeLists.txt  SpaceInvadersTest.cpp
tests/: CMakeLists.txt
tests/CpmdStats/: Test.cpp
tests/CpmdStats/data/: original.meatdata
tests/SpaceInvaders/: Game.cpp
tests/SpaceInvaders/data/: console.json  game.json  init.json
tests/SpaceInvaders/data/cfg/: autoexec.cfg  config.cfg  console.cfg
tests/SpaceInvaders/data/meatdata/: Console.cpmd  Game.meatdata  Init.cpmd  MainScene.cpmd
tests/SpaceInvaders/data/theme/: console.json
tests/SpaceInvaders/src/: Bullet.cpp  Bullet.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Game.cpp  Game.h  Main.cpp  Player.cpp  Player.h  Vector2uc.h
tests/UIMaker/data/cfg/: config.cfg
tests/UIMaker/data/meatdata/: Init.meatdata
tests/UIMaker/data/scripts/: Meatball.lua  Test.lua  UIMaker.lua
tests/UIMaker/scripts/: Meatball.lua  test.lua
tests/UIMaker/src/: GameInterface.cpp  GameInterface.h  Main.cpp
